BO: Add route to get product images

--- a/src/PrestaShopBundle/Resources/config/admin/routing_combination.yml
+++ b/src/PrestaShopBundle/Resources/config/admin/routing_combination.yml
@@ -14,3 +14,13 @@ admin_get_product_combinations:
         idProduct: 0
     requirements:
         idProduct: \d+
+
+admin_get_images_product_combinations:
+    path:     /product-images-combinations/{idProduct}
+    methods:  [GET]
+    defaults:
+        _controller: PrestaShopBundle:Admin/Combination:getProductImagesCombinations
+        _format: json
+        idProduct: 0
+    requirements:
+        idProduct: \d+
