--- a/composer.json
+++ b/composer.json
@@ -102,7 +102,8 @@
         "symfony/phpunit-bridge": "~3.1.3",
         "phake/phake": "@stable",
         "friendsofphp/php-cs-fixer": "^1.10",
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~2.3",
+        "squizlabs/php_codesniffer": "^3"
     },
     "autoload-dev": {
         "psr-4": {
