--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_install:
   - bash travis-scripts/setup-apache.sh
 
   # PrestaShop configuration
-  - cp -Rf .composer/* ~/.composer/ & composer global install;
+  - cp -Rf .composer/* ~/.composer/ && composer global install;
   - cp tests/parameters.yml.travis app/config/parameters.yml
 
 notifications:
