FO: Fix moving bloc on clic

--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,7 @@ themes/default-bootstrap/modules/*/mails/*
 
 # Linux trash folder which might appear on any partition or disk
 .Trash-*
+.php_cs.cache
 
 
 ### OSX ###
