CO: Specific price for Zone

--- a/src/PrestaShopBundle/Resources/config/admin/services-form.yml
+++ b/src/PrestaShopBundle/Resources/config/admin/services-form.yml
@@ -84,6 +84,7 @@ services:
             - "@prestashop.adapter.data_provider.group"
             - "@prestashop.adapter.legacy.context"
             - "@prestashop.adapter.data_provider.customer"
+            - "@prestashop.adapter.data_provider.zone"
         tags:
             - { name: form.type }
 
@@ -126,6 +127,7 @@ services:
             - "@prestashop.adapter.data_provider.group"
             - "@prestashop.adapter.legacy.context"
             - "@prestashop.adapter.data_provider.customer"
+            - "@prestashop.adapter.data_provider.zone"
         tags:
             - { name: form.type }
 
