--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ php:
   - 5.4
   - 5.6
   - 7.0
+  - 7.2
 
 env:
     global:
@@ -31,6 +32,8 @@ matrix:
     - php: 7.1
       # temporarily disabled
       # env: EXTRA_TESTS=functional
+  allow_failures:
+    - php: 7.2
 
 before_install:
   # Apache & php-fpm configuration
