--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,20 @@
 {
-  "ecmaFeatures": {
-    "modules": true
-  },
+  "extends": "airbnb",
   "env": {
     "es6": true,
     "browser": true
   },
   "parserOptions": {
     "ecmaVersion": 6,
-    "sourceType": "module"
+    "sourceType": "module",
+    "impliedStrict": true,
+    "ecmaFeatures": {
+      "modules": true
+    }
   },
   "rules": {
-    "semi": 2,
-    "eqeqeq": 2,
-    "no-undef": 2,
     "no-unused-vars": 1,
-    "no-use-before-define": 0,
-    "max-depth": [2, 3],
-    "no-loop-func": 2
+    "no-use-before-define": 2,
+    "max-depth": [2, 3]
   }
 }
