--- a/package.json
+++ b/package.json
@@ -9,5 +9,14 @@
         "test-verbose": "cd tests/js && grunt --stack test-verbose"
     },
     "author": "PrestaShop",
-    "license": "OSL-3.0"
+    "license": "OSL-3.0",
+    "devDependencies": {
+      "eslint": "^4.4.1",
+      "eslint-config-airbnb": "^15.1.0",
+      "eslint-config-airbnb-base": "^11.3.1",
+      "eslint-plugin-jsx-a11y": "^5.1.1",
+      "eslint-plugin-import": "^2.7.0",
+      "eslint-plugin-react": "^7.2.0",
+      "babel-eslint": "^7.2.3"
+    }
 }
