--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: php
 
+sudo: required
 dist: precise
 
 php:
@@ -9,25 +10,20 @@ php:
   - 5.6
   - 7.0
 
-before_install:
-  - sudo apt-get update
+addons:
+  apt:
+    packages:
+      - apache2
+
+cache:
+  directories:
+    - $HOME/.composer/cache
 
 before_script:
-  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then sudo cp tests/php7-pool.conf ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/; fi
-  - sudo apt-get install apache2 libapache2-mod-fastcgi
-  - cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
-  - sudo a2enmod rewrite actions fastcgi alias
-  - echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-  - ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm
-  - sudo cp -f tests/travis-ci-apache-vhost /etc/apache2/sites-available/default
-  - sudo cp -Rf . /var/www/prestashop.unit.test
-  - sudo chmod 777 -R /var/www/
-  - sudo service apache2 restart
+  - bash travis-scripts/setup-php-fpm.sh
+  - bash travis-scripts/setup-apache.sh
 
-notifications:
-  slack: prestashop:Eovjydk55zPrwPkoQIOF0cZn
-  hipchat: ec4e21c5eb82066ba8be5fd1afefde@1184657
 script:
-  - /var/www/prestashop.unit.test/tests/check_php_parse_errors.sh
-  - php /var/www/prestashop.unit.test/install-dev/index_cli.php --language=en --country=us --domain=localhost --base_uri=/prestashop.unit.test --db_name=prestashop.unit.test --db_create=1 --name=prestashop.unit.test --password=123456789
-  - cd /var/www/prestashop.unit.test/tests && bash getcomposer.sh && php composer.phar install && php vendor/bin/phpunit -c .
+  - tests/check_php_parse_errors.sh
+  - php install-dev/index_cli.php --language=en --country=us --domain=localhostt --db_name=prestashop.unit.test --db_create=1 --name=prestashop.unit.test --password=123456789
+  - cd tests && bash getcomposer.sh && php composer.phar install && php vendor/bin/phpunit -c .
