--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -49,3 +49,10 @@ prestashop:
     addons:
         api_client:
             ttl: 300 # 5min
+
+services:
+    test.add_description_field:
+        class: 'PrestaShopBundle\Tests\Form\DescriptionField'
+        public: false
+        tags:
+            - { name: 'prestashop.field_provider'}
