--- a/composer.json
+++ b/composer.json
@@ -96,7 +96,8 @@
         "beberlei/DoctrineExtensions": "^1.0",
         "composer/ca-bundle": "^1.0",
         "nikic/php-parser": "^2.1",
-        "prestashop/decimal": "^1.0.0"
+        "prestashop/decimal": "^1.0.0",
+        "psr/cache": "^1.0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5",
