--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "PrestaShop offers a free, fully scalable, Open Source e-commerce solution.",
     "type": "project",
     "require": {
-        "php": ">=5.4",
-        "symfony/symfony": "~2.8.6",
+        "php": ">=5.5.9",
+        "symfony/symfony": "~3.3",
         "defuse/php-encryption": "~2.0.1",
         "doctrine/dbal": "~2.5.3",
         "doctrine/cache": "~1.6|~1.5",
@@ -14,17 +14,17 @@
         "ext-intl": "*",
         "ext-zip": "*",
         "geoip2/geoip2": "~2.4.2",
-        "doctrine/doctrine-bundle": "1.5.2",
+        "doctrine/doctrine-bundle": "^1.6",
         "mrclay/minify": "~2.3.0",
         "matthiasmullie/minify": "~1.3.0",
         "jakeasmith/http_build_url": "^1",
         "mobiledetect/mobiledetectlib": "~2.8.22",
-        "symfony/swiftmailer-bundle": "2.3.11",
+        "symfony/swiftmailer-bundle": "^2.3.10",
         "pear/archive_tar": "~1.4.2",
         "swiftmailer/swiftmailer": "~5.4.3",
-        "symfony/monolog-bundle": "2.8.2",
-        "sensio/distribution-bundle": "~4.0.6",
-        "sensio/framework-extra-bundle": "3.0.10",
+        "symfony/monolog-bundle": "^3.1.0",
+        "sensio/distribution-bundle": "^5.0.19",
+        "sensio/framework-extra-bundle": "^3.0.2",
         "prestashop/translationtools-bundle": "dev-master",
         "tecnickcom/tcpdf": "6.2.12",
         "composer/installers": "1.0.21",
@@ -100,21 +100,20 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5",
-        "symfony/phpunit-bridge": "~3.1.3",
+        "symfony/phpunit-bridge": "^3.0",
         "phake/phake": "@stable",
-        "friendsofphp/php-cs-fixer": "^1.10",
-        "sensio/generator-bundle": "~2.3"
+        "friendsofphp/php-cs-fixer": "^1.10"
     },
     "autoload-dev": {
-        "psr-4": {
-            "PrestaShop\\PrestaShop\\Tests\\": "tests/"
-        }
+        "psr-4": { "PrestaShop\\PrestaShop\\Tests\\": "tests/" },
+        "files": [ "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php" ]
     },
     "autoload": {
         "psr-4": {
             "PrestaShop\\PrestaShop\\": "src/",
             "PrestaShopBundle\\": "src/PrestaShopBundle/"
-        }
+        },
+        "classmap": [ "app/AppKernel.php", "app/AppCache.php", "classes/PrestaShopAutoload.php" ]
     },
     "scripts": {
         "post-install-cmd": [
@@ -132,21 +131,24 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
         ],
-        "git-hook-install": "php .github/contrib/install.php",
-        "git-hook-uninstall": "php .github/contrib/uninstall.php",
+        "git-hook-install": "@php .github/contrib/install.php",
+        "git-hook-uninstall": "@php .github/contrib/uninstall.php",
         "cldr-init": "PrestaShop\\PrestaShop\\Core\\Cldr\\Composer\\Hook::init",
-        "phpunit-sf": "php bin/phpunit -c admin-dev/",
-        "phpunit-controllers": "php bin/phpunit -c app/"
+        "phpunit-sf": "@php bin/phpunit -c admin-dev/",
+        "phpunit-controllers": "@php bin/phpunit -c ."
     },
     "config": {
-        "bin-dir": "bin",
         "platform": {
-            "php": "5.4.0"
-        }
+            "php": "5.5.9"
+        },
+        "sort-packages": true
     },
     "extra": {
         "symfony-app-dir": "app",
+        "symfony-bin-dir": "bin",
+        "symfony-var-dir": "var",
         "symfony-web-dir": "web",
+        "symfony-tests-dir": "tests",
         "symfony-assets-install": "relative",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
