--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ themes/default-bootstrap/modules/*/mails/*
 
 # Symfony
 
+/bin/
 /.web-server-pid
 /app/config/parameters.yml
 /app/config/parameters.php
