TE: fixed tests

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,8 +30,7 @@ framework:
     trusted_hosts:   ~
     trusted_proxies: ~
     session:
-        handler_id:  session.handler.native_file
-        save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"
+        handler_id:  ~
     fragments:       ~
     http_method_override: true
 
