--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "PrestaShop offers a free, fully scalable, Open Source e-commerce solution.",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=5.6.0",
         "symfony/symfony": "~3.3",
         "defuse/php-encryption": "~2.0.1",
         "doctrine/dbal": "~2.5.3",
@@ -99,7 +99,7 @@
         "prestashop/decimal": "^1.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.5",
+        "phpunit/phpunit": "~5.7",
         "symfony/phpunit-bridge": "^3.0",
         "phake/phake": "@stable",
         "friendsofphp/php-cs-fixer": "^1.10"
@@ -113,7 +113,7 @@
             "PrestaShop\\PrestaShop\\": "src/",
             "PrestaShopBundle\\": "src/PrestaShopBundle/"
         },
-        "classmap": [ "app/AppKernel.php", "app/AppCache.php", "classes/PrestaShopAutoload.php" ]
+        "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
     },
     "scripts": {
         "post-install-cmd": [
@@ -134,12 +134,13 @@
         "git-hook-install": "@php .github/contrib/install.php",
         "git-hook-uninstall": "@php .github/contrib/uninstall.php",
         "cldr-init": "PrestaShop\\PrestaShop\\Core\\Cldr\\Composer\\Hook::init",
-        "phpunit-sf": "@php bin/phpunit -c admin-dev/",
-        "phpunit-controllers": "@php bin/phpunit -c ."
+        "tests": "@php ./vendor/bin/phpunit -c tests/phpunit.xml tests/",
+        "sf-tests": "@php ./vendor/bin/phpunit -c tests/sf-tests.xml tests/",
+        "old-controllers-tests": "@php ./vendor/bin/phpunit -c tests/old-controllers.xml tests/"
     },
     "config": {
         "platform": {
-            "php": "5.5.9"
+            "php": "5.6.0"
         },
         "sort-packages": true
     },
