--- a/.travis.yml
+++ b/.travis.yml
@@ -45,9 +45,10 @@ script:
   - composer install --prefer-dist --no-interaction --no-progress
   - bash tests/check_file_syntax.sh
   - bash travis-scripts/install-prestashop
-  - composer old-controllers-tests
-  - composer sf-tests
-  - composer tests
+  - composer phpunit-legacy
+  - composer phpunit-admin
+  - composer phpunit-sf
+  - composer phpunit-controllers
   - bash ./travis-scripts/run-selenium-tests
   - bash ./travis-scripts/run-functional-tests # Must run before starter theme
   - bash ./travis-scripts/test-startertheme
