--- a/.travis.yml
+++ b/.travis.yml
@@ -45,8 +45,8 @@ script:
   - composer install --prefer-dist --no-interaction --no-progress
   - bash tests/check_file_syntax.sh
   - bash travis-scripts/install-prestashop
-  - composer test
-  - composer test-admin
+  - composer phpunit-legacy
+  - composer phpunit-admin
   - composer phpunit-sf
   - composer phpunit-controllers
   - bash ./travis-scripts/run-selenium-tests
