--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,12 @@
         "ext-intl": "*",
         "ext-zip": "*",
         "curl/curl": "1.2.1",
+        "symfony/polyfill-apcu": "^1.0",
         "symfony/symfony": "v3.4.0-BETA4",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/monolog-bundle": "^3.1.0",
-        "doctrine/dbal": "~2.5.3",
-        "doctrine/cache": "~1.6|~1.5",
-        "doctrine/common": "~2.5.3",
-        "doctrine/orm": "~2.5.3",
+        "doctrine/cache": "^1.6",
+        "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.6",
         "twig/twig": "^1.0||^2.0",
         "sensio/distribution-bundle": "^5.0.19",
