CO: commit deps lock file

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-intl": "*",
         "ext-zip": "*",
         "curl/curl": "1.2.1",
+        "symfony/polyfill-apcu": "^1.0",
         "symfony/symfony": "^3.4.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/monolog-bundle": "^3.1.0",
@@ -41,7 +42,7 @@
         "composer/ca-bundle": "^1.0",
         "nikic/php-parser": "^2.1",
         "paragonie/random_compat": "^1.4|^2.0",
-        "prestashop/translationtools-bundle": "dev-master",
+        "prestashop/translationtools-bundle": "2.x-dev",
         "prestashop/smarty": "dev-master",
         "prestashop/blockreassurance": "dev-master",
         "prestashop/contactform": "dev-master",
