--- a/src/PrestaShopBundle/Resources/config/admin/routing_advanced_parameters.yml
+++ b/src/PrestaShopBundle/Resources/config/admin/routing_advanced_parameters.yml
@@ -1,3 +1,10 @@
+admin_logs:
+    path: logs
+    methods: [GET]
+    defaults:
+        _controller: 'PrestaShopBundle\Controller\Admin\AdvancedParameters\LogsController::indexAction'
+        _legacy_controller: AdminLogs
+
 admin_system_information:
     path: system_information
     methods: [GET]
