--- a/src/PrestaShopBundle/Resources/config/admin/routing_advanced_parameters.yml
+++ b/src/PrestaShopBundle/Resources/config/admin/routing_advanced_parameters.yml
@@ -5,6 +5,13 @@ admin_logs:
         _controller: 'PrestaShopBundle\Controller\Admin\AdvancedParameters\LogsController::indexAction'
         _legacy_controller: AdminLogs
 
+admin_logs_save:
+    path: logs
+    methods: [POST]
+    defaults:
+        _controller: 'PrestaShopBundle:Admin\AdvancedParameters\Logs:processForm'
+        _legacy_controller: AdminLogs
+
 admin_system_information:
     path: system_information
     methods: [GET]
