--- a/src/PrestaShopBundle/Resources/config/adapter/services.yml
+++ b/src/PrestaShopBundle/Resources/config/adapter/services.yml
@@ -43,6 +43,10 @@ services:
         class: 'PrestaShop\PrestaShop\Adapter\Smarty\SmartyCacheConfiguration'
         arguments: ['@prestashop.adapter.legacy.configuration']
 
+    prestashop.adapter.logs.configuration:
+        class: 'PrestaShop\PrestaShop\Adapter\Configuration\LogsConfiguration'
+        arguments: ['@prestashop.adapter.legacy.configuration']
+
     prestashop.adapter.debug_mode:
         class: 'PrestaShop\PrestaShop\Adapter\Debug\DebugMode'
 
@@ -112,6 +116,11 @@ services:
             - '@prestashop.adapter.upload_quota.configuration'
             - '@prestashop.adapter.notifications.configuration'
 
+    prestashop.adapter.logs.form_provider:
+        class: 'PrestaShopBundle\Form\Admin\AdvancedParameters\Logs\LogsFormDataProvider'
+        arguments:
+            - '@prestashop.adapter.logs.configuration'
+
     prestashop.adapter.performance.form_handler:
         class: 'PrestaShopBundle\Form\Admin\AdvancedParameters\Performance\PerformanceFormHandler'
         arguments:
@@ -124,6 +133,12 @@ services:
         arguments:
             - '@form.factory'
             - '@prestashop.adapter.administration.form_provider'
+
+    prestashop.adapter.logs.form_handler:
+        class: 'PrestaShopBundle\Form\Admin\AdvancedParameters\Logs\LogsFormHandler'
+        arguments:
+            - '@form.factory'
+            - '@prestashop.adapter.logs.form_provider'
 
     prestashop.adapter.memcache_server.manager:
         class: 'PrestaShop\PrestaShop\Adapter\Cache\MemcacheServerManager'
